--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 .idea/modules.xml
 .idea/workspace.xml
 .idea/inspectionProfiles/Project_Default.xml
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/CMakeFiles/
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/Makefile
