final works for presentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_OPT_FLAG}")
 SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_OPT_FLAG}")
 
 set(SOURCE_FILES main.c lib/tp2opt.c lib/tp2opt.h lib/packet.c lib/packet.h lib/common.h lib/modules.c lib/modules.h lib/debug.h lib/modules/pipes.h)
-add_executable(TP2 ${SOURCE_FILES})
+add_executable(myps ${SOURCE_FILES})
